# django-backend

./: pyproject.toml
ghostpost/: admin.py  models.py  serializers.py  views.py
ghostpost/migrations/: 0001_initial.py  0002_auto_20210330_2341.py  0003_remove_rbmodel_privatesecret_key.py
react/: settings.py  urls.py
