[tool.poetry]
name = "drf-plus-react-equals-love-backend-ariesgal2017"
version = "0.1.0"
description = ""
authors = ["jennifer <ariesgal2017@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework = "^3.12.4"
django-cors-headers = "^3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
